<resources>
    <string name="app_name">Car Care</string>
    <string name="new_car">Add Car</string>
    <string name="search_service_stations">Search Service Stations</string>
    <string name="car_model_label">Model</string>
    <string name="car_tire_label">Tire Size</string>
    <string name="car_year_label">Model Year</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="car_details">Car Details</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="service_details">Service Details</string>
    <string name="update_button">Update</string>
    <string name="miles"> miles</string>
    <string name="service_history">Service History</string>
    <string name="select_car">Select a Car</string>
    <string name="add_widget">Add Widget</string>
    <string name="title_activity_search">Search Service Locations</string>
    <string name="date_of_service">Date of Service</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="car_delete_message">Are you sure you want to delete this car and its service history?</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="import_warning">All current data will be overriden. Proceed?</string>
    <string name="car_plate_label">License Plate</string>
    <string name="car_trim_label">Trim Level</string>
    <string name="notes_label">Notes</string>
    <string name="service_detail_description_label">Description</string>
</resources>
